<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recyclerMainLayout"
    tools:ignore="MissingDefaultResource"
    android:background="@color/background">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:spanCount="7"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/background">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mon"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="266dp"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tue"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="273dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wen"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="266dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thu"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="273dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fri"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="266dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sat"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="273dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sun"
            android:layout_weight="1"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="266dp"
            android:textSize="16sp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>